# test-plugin

./: common.py
plugins/bar/: setup.cfg
plugins/bar/bar_pn/: bar_plugin.py
plugins/foo/: setup.cfg
plugins/foo/foo_pn/: foo_plugin.py
