[metadata]
name = foo-plugin
summary = Heat resources for working Zaqar queues
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    foo_pn

[entry_points]
glance.artifacts.types =
    foo = foo_pn.foo_plugin:Foo

[global]
setup-hooks =
    pbr.hooks.setup_hook
